--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Testing</h1>
     <footer>Hello World</footer>
+    <p><a href="Projects/wdd-javascriptformatted-current-date/dist/index.html">Week 1 Activity</a></p>
 </body>
 </html>
