--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descrition" content="This is a websight belonging to Luke Bullock, that will be used 
     to provide homework to be graded in the form of links to different pages of the websight.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&display=swap" rel="stylesheet">
+
+
     <title>My Portal</title>
 </head>
 <body>
     <header>
         <div class="header-box">
-            <img class="portrait" src="images/portrait.jpg" alt="Portrait">
+            <div id="portrait-box">
+                <img class="portrait" src="images/portrait.jpg" alt="Portrait">
+            </div>
             <h1 id="mainPageTitle">Luke B. Bullock</h1>
         </div>
     </header>
 
     <main>
-        <h1>WDD 230: Assignment Portal</h1>
-        <hr>
-        <ul>
-            <li>Lesson 01: <a href="projects/week_1/dist/index.html">Week 1 Activity</a> </li>
-        </ul>
-        <hr>
+        <div class="content-box">
+            <h1>WDD 230: Assignment Portal</h1>
+            <hr>
+            <ul>
+                <li>Lesson 01: <a href="projects/week_1/dist/index.html">Week 1 Activity</a> </li>
+            </ul>
+            <hr>
+        </div>
     </main>
     
     <footer>
