--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <hr>
             <ul>
                 <li>Lesson 01: <a href="projects/week_1/dist/index.html">Week 1 Activity</a> </li>
-                <li>Lesson 02 <a href="projects/lesson2/design-principles.html">Week 2 Activity</a> </li>
+                <li>Lesson 02: <a href="projects/lesson2/design-principles.html">Week 2 Activity</a> </li>
             </ul>
             <hr>
         </div>
