Final change to URL

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <li>Lesson 01: <a href="projects/lesson1/dist/index.html">Week 1 Activity</a> </li>
                 <li>Lesson 02: <a href="projects/lesson2/design-principles.html">Week 2 Activity</a> </li>
-                <li>Lesson 03: <a href="projects/lesson3/index.html">Week 3 Activity</a> </li>
+                <li>Lesson 03: <a href="projects/lesson3/">Week 3 Activity</a> </li>
             </ul>
             <hr>
         </div>
