--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -79,7 +79,7 @@
         <div id="Content-1">
             <p> LethoCom chamber of Commerce </p>
             <p2> 10 Rue De Le Paix </p2> 
-            <p2> LethoCome, mali 999 </p2>
+            <p2> LethoCom, mali 999 </p2>
         </div>
 
         <div id="Content-2">
