--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li>Lesson 01: <a href="projects/lesson1/dist/index.html">Week 1 Activity</a> </li>
                 <li>Lesson 02: <a href="projects/lesson2/design-principles.html">Week 2 Activity</a> </li>
                 <li>Lesson 03: <a href="projects/lesson3/">Week 3 Activity</a> </li>
+                <li>Chamber mainpage <a href="projects/chamber/"> Week 4 Activity</a></li>
             </ul>
             <hr>
         </div>
