--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -17,14 +17,14 @@
 <body>
     <header>
         <div id="top-box">
-            <img id="logo" src="images/fulllogo.jpg", alt="Logo image">
+            <img id="logo" src="images/fulllogo.jpg" alt="Logo image">
             <div id="header-text">
-                <p> LethoCom </p>
-                <p2> Chamber of Commerce </p2>
+                <p>LethoCom </p>
+                <h2>Chamber of Commerce </h2>
             </div>
             <div id="icons"> 
-                <img id="facebook" src="images/facebook.png", alt="Facebook image">
-                <img id="linkedin" src="images/linkedin.png", alt="Linkedin image">    
+                <img id="facebook" src="images/facebook.png" alt="Facebook image">
+                <img id="linkedin" src="images/linkedin.png" alt="Linkedin image">    
             </div>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
@@ -75,27 +75,27 @@
     </main>
 
     <footer>
-        <img id="footer-logo" src="images/fulllogo.jpg", alt="Logo image">
+        <img id="footer-logo" src="images/fulllogo.jpg" alt="Logo image">
         <div id="Content-1">
             <p> LethoCom chamber of Commerce </p>
-            <p2> 10 Rue De Le Paix </p2> 
-            <p2> LethoCom, mali 999 </p2>
+            <h2> 10 Rue De Le Paix </h2> 
+            <h2> LethoCom, mali 999 </h2>
         </div>
 
         <div id="Content-2">
-            <p2> info@timbuktucc.org </p2>
-            <p2> +(223) 2070-2300 </p2>
-            <p2>&#xf3c5; Location Map</p2>
+            <h2> info@timbuktucc.org </h2>
+            <h2> +(223) 2070-2300 </h2>
+            <h2>&#xf3c5; Location Map</h2>
         </div>
         <hr>
         <div id="Content-3">
-            <p2>&copy; <span id="current-year"></span></p2> <!-- Year -->
+            <h2>&copy; <span id="current-year"></span></h2> <!-- Year -->
             <p> | </p>
             <p>Luke Benjamin Bullock</p>
             <p> | </p>
-            <p2>WDD 230 Project</p2>
+            <h2>WDD 230 Project</h2>
             <p> | </p>
-            <p2>Last modification: <span id="dynamic-time-stamp"></span></p2>    
+            <h2>Last modification: <span id="dynamic-time-stamp"></span></h2>    
         </div>
     </footer>
     <script src="scripts/script.js"></script>
