--- a/projects/lesson3/target-audience.html
+++ b/projects/lesson3/target-audience.html
@@ -159,7 +159,7 @@
             </div>
 
             <div class="table-square">
-                <p>They have a cheap computer, a phone, a limited amount of money, and are currently renting a basement sweet. </p>
+                <p>They have a cheap computer, a phone, a limited amount of money, and are currently renting a basement suite. </p>
             </div>
 
             <div class="table-square">
@@ -169,6 +169,20 @@
             <div class="table-square">
                 <p>"Will I be able to comfortably raise a family here?" </p>
             </div>
+        </div>
+
+            <h2>Scenarios</h2>
+            
+            <ul>
+                <li>Will this be a good place to live? </li>
+                <li>What is the best place to start my buizness? </li>
+                <li>What attactions or events can I attend while passing by? </li>
+                <li>What are the best places to eat/stay while passing by? </li>
+                <li>What social events are available for young single adults? </li>
+            </ul>
+            
+
+
     </main>
 </body>
 </html>
