--- a/projects/lesson3/index.html
+++ b/projects/lesson3/index.html
@@ -39,7 +39,7 @@
         <hr>
         <h2>Branding</h2>
         <h3>Websight Logo</h3>
-        <img id="logo" src="images/fulllogo.jpg", alt="Logo image"> 
+        <img id="logo" src="images/fulllogo.jpg" alt="Logo image"> 
     </main>
 </body>
 </html>
