--- a/projects/lesson3/target-audience.html
+++ b/projects/lesson3/target-audience.html
@@ -78,8 +78,8 @@
 
             <div class="table-square">
                 <p>- They would like to see what needs are not being met in the community. </p>
-                    - They would like to know where the most foot traffic their is, for a better place to setup shop. </p> 
-                    - They would like to know what the local competition is.  </p>
+                <p>- They would like to know where the most foot traffic their is, for a better place to setup shop. </p> 
+                <p>- They would like to know what the local competition is.  </p>
             </div>
 
             <div class="table-square">
@@ -150,8 +150,8 @@
 
             <div class="table-square">
                 <p>- They want to know the pricing of homes, as well as goods/services in the community </p>
-                    - They would like to know what community locations and events individuals or the whole family could attend</p> 
-                    - They would like to know whether the city is safe or not.</p>
+                <p>- They would like to know what community locations and events individuals or the whole family could attend</p> 
+                <p>- They would like to know whether the city is safe or not.</p>
             </div>
 
             <div class="table-square">
