--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Lesson 02: <a href="projects/lesson2/design-principles.html">Week 2 Activity</a> </li>
                 <li>Lesson 03: <a href="projects/lesson3/">Week 3 Activity</a> </li>
                 <li>Chamber page<a href="projects/chamber/"> Week 4 Activity</a></li>
-                <li>Lesson 05: <a href="projects/lesson5/"> Week 5 Activity</a></li>
+                <li>Lesson 05: <a href="projects/lesson5/bom.html"> Week 5 Activity</a></li>
             </ul>
             <hr>
         </div>
