Added formatting for future content

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -41,35 +41,64 @@
 
     <main>
         <div id="hero-box">
-            <p>Hero with site name and call to action</p>
+            <p>Welcome to Lethrbridge</p>
+            <img id="hero-img" src="images/lethbridge.jpg" alt="Photo of Lethbridge">
+            <button id="chamber-button">Join the Chamber</button>
         </div>
 
         <div id="event-box">
             <p>Event</p>
+            <p id="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
 
         <div id="weather-box">
             <p>Weather</p>
+            <!-- ! weather img -->
+            <span id="weather-type"></span>
+            <span id="wind-speed"></span>
+            <span id="wind-chill"></span>
         </div>
 
         <div id="news-Release">
             <p>New Release</p>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h2>
         </div>
 
         <div id="spotlight-box">
             <div id="spotlight-1">
                 <p>Spotlight 1</p>
+                <h2>Spotlight description</h2>
+                <hr>
+                <h2>Websight</h2>
+                <h2>Phone number</h2>
             </div>
             <div id="spotlight-2">
                 <p>Spotlight 2</p>
+                <h2>Spotlight description</h2>
+                <hr>
+                <h2>Websight</h2>
+                <h2>Phone number</h2>
             </div>
             <div id="spotlight-3">
                 <p>Spotlight 3</p>
+                <h2>Spotlight description</h2>
+                <hr>
+                <h2>Websight</h2>
+                <h2>Phone number</h2>
             </div>
         </div>
 
         <div id="join-box">
-            <p>Join</p>
+            <button id="join-button">Join us!</button>
+            <h2>Discover how to join the chamber of commerce and how it
+                will benefit your organization!
+            </h2>
         </div>
 
     </main>
