Changed the banner

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
+<p id="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
 <body>
     <header>
         <div id="top-box">
@@ -48,7 +49,6 @@
 
         <div id="event-box">
             <p>Event</p>
-            <p id="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
 
         <div id="weather-box">
@@ -114,7 +114,7 @@
         <div id="Content-2">
             <h2> info@timbuktucc.org </h2>
             <h2> +(223) 2070-2300 </h2>
-            <h2>&#xf3c5; Location Map</h2>
+            <h2>&#x1F4CD; Location Map</h2>
         </div>
         <hr>
         <div id="Content-3">
