Did my best to fix things.

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -24,8 +24,12 @@
                 <h2>Chamber of Commerce </h2>
             </div>
             <div id="icons"> 
-                <img id="facebook" src="images/facebook.png" alt="Facebook image">
-                <img id="linkedin" src="images/linkedin.png" alt="Linkedin image">    
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img id="facebook" src="images/facebook.png" alt="Facebook image">
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <img id="linkedin" src="images/linkedin.png" alt="Linkedin image">    
+                </a> 
             </div>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
@@ -60,7 +64,7 @@
         </div>
 
         <div id="news-Release">
-            <p>New Release</p>
+            <p>News Release</p>
             <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -114,7 +118,11 @@
         <div id="Content-2">
             <h2> info@timbuktucc.org </h2>
             <h2> +(223) 2070-2300 </h2>
-            <h2>&#x1F4CD; Location Map</h2>
+            <h2 id = "map-link">
+                <a href="https://www.google.com/maps/place/Lethbridge,+AB,+Canada/@49.6947989,-112.8054169,13z/data=!3m1!4b1!4m5!3m4!1s0x53766e2c2a9e9ecb:0x40d6f14cc25f71b1!8m2!3d49.7009!4d-112.833" target="_blank">
+                  &#x1F4CD; Location Map
+                </a>
+              </h2>
         </div>
         <hr>
         <div id="Content-3">
