--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -47,7 +47,11 @@
     <main>
         <div id="hero-box">
             <p>Welcome to Lethrbridge</p>
-            <img id="hero-img" src="images/lethbridge.jpg" alt="Photo of Lethbridge">
+            <img id="hero-img" src="images/placeholder-hero-original.jpg"
+            srcset="images/placeholder-hero-500.jpg, images/placeholder-hero-1000.jpg, images/placeholder-hero-800" 
+            sizes="(max-width: 35rem) 500px, (max-width: 64rem) 1000px, 800px"
+            alt="Photo of Lethbridge">
+            <!--! Make sure to optimize this image later when you use the original. -->
             <button id="chamber-button">Join the Chamber</button>
         </div>
 
