Fixing stupid bugs.

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -51,9 +51,11 @@
             <img id="hero-img" src="images/placeholder-hero-original.jpg"
             srcset="images/placeholder-hero-small-500.jpg, 
             images/placeholder-hero-medium-1000.jpg, 
-            images\placeholder-hero-large-800.png" 
-            sizes="(max-width: 560em) 500px, (max-width: 1024rem) 1000px, 800px"
+            images/placeholder-hero-large-800.png" 
+            sizes="(max-width: 560px) 500px, (max-width: 1024px) 1000px, 800px"
             alt="Photo of Lethbridge">
+
+            <!-- <img id="hero-img" src="images/placeholder-hero-large-800.png" alt="Photo of Lethbridge"> -->
             <!--! Make sure to optimize this image later when you use the original. -->
             <button id="chamber-button">Join the Chamber</button>
         </div>
