switched hamberger icon back to old style

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -14,7 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
-<p id="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
 <body>
     <header>
         <div id="top-box">
@@ -42,17 +41,19 @@
             </nav>
         </div>
         <div id="header-date"><span id="date-head"></span></div> <!-- ! Date -->
+        <p id="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
     </header>
 
     <main>
         <div id="hero-box">
             <p>Welcome to Lethrbridge</p>
             <!--! I need help with the following code. -->
-            <img id="hero-img" src="images/placeholder-hero-original.jpg"
-            srcset="images/placeholder-hero-small-500.jpg, 
-            images/placeholder-hero-medium-1000.jpg, 
-            images/placeholder-hero-large-800.png" 
+            <img id="hero-img"
+            srcset="images/placeholder-hero-small-500.jpg 500w, 
+            images/placeholder-hero-medium-1000.jpg 1000w, 
+            images/large.jpg 800w" 
             sizes="(max-width: 560px) 500px, (max-width: 1024px) 1000px, 800px"
+            src="images/placeholder-hero-original.jpg"
             alt="Photo of Lethbridge">
 
             <!-- <img id="hero-img" src="images/placeholder-hero-large-800.png" alt="Photo of Lethbridge"> -->
