--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -62,7 +62,11 @@
         </div>
 
         <div id="event-box">
-            <p>Event</p>
+            <p>Christmas Lights Festival</p>
+            <h2>The christmas lights festival will be open at the japanese gardens starting
+                december 23rd. We hope that you can take part in this breathtaking
+                display. Open Sunday, Wednesday, Thursday, Friday, and Saturday. 
+            </h2>
         </div>
 
         <div id="weather-box">
