--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -47,7 +47,8 @@
     <main>
         <div id="hero-box">
             <p>Welcome to Lethrbridge</p>
-            <!--! I need help with the following code. -->
+
+            <!-- ! In this instance, having three different images isn't feasable.
             <img id="hero-img"
             srcset="images/placeholder-hero-small-500.jpg 500w, 
             images/placeholder-hero-medium-1000.jpg 1000w, 
@@ -55,8 +56,16 @@
             sizes="(max-width: 560px) 500px, (max-width: 1024px) 1000px, 800px"
             src="images/placeholder-hero-original.jpg"
             alt="Photo of Lethbridge">
+            -->
+            
+            <img id="hero-img"
+            srcset="images/placeholder-hero-small-500.jpg 500w,  
+            images/large.jpg 800w" 
+            sizes="(max-width: 560px) 500px, 800px"
+            src="images/placeholder-hero-original.jpg"
+            alt="Photo of Lethbridge">
 
-            <!-- <img id="hero-img" src="images/placeholder-hero-large-800.png" alt="Photo of Lethbridge"> -->
+            
             <!--! Make sure to optimize this image later when you use the original. -->
             <button id="chamber-button">Join the Chamber</button>
         </div>
@@ -92,25 +101,35 @@
 
         <div id="spotlight-box">
             <div id="spotlight-1">
-                <p>Spotlight 1</p>
-                <h2>Spotlight description</h2>
+                <p>Lethbridge Library</p>
+                <h2>More than just a library.</h2>
                 <hr>
-                <h2>Websight</h2>
-                <h2>Phone number</h2>
+                <h2>questions@lethlib.ca</h2>
+                <div class="bottom-row">
+                    <h2>(403) 380-7310</h2>
+                    <h2> | </h2>
+                    <a href="http://www.lethlib.ca/" target="_self"><h2>Websight</h2></a>
+                </div>
             </div>
             <div id="spotlight-2">
-                <p>Spotlight 2</p>
-                <h2>Spotlight description</h2>
+                <p>CASA</p>
+                <h2>Home of the arts</h2>
                 <hr>
-                <h2>Websight</h2>
-                <h2>Phone number</h2>
+                <div class="bottom-row">
+                    <h2>(403) 327-2272</h2>
+                    <h2> | </h2>
+                    <a href="https://casalethbridge.ca/" target="_self"><h2>Websight</h2></a>
+                </div>
             </div>
             <div id="spotlight-3">
-                <p>Spotlight 3</p>
-                <h2>Spotlight description</h2>
+                <p>Fairfeild Hotel</p>
+                <h2>Good place to stay when passing through</h2>
                 <hr>
-                <h2>Websight</h2>
-                <h2>Phone number</h2>
+                <div class="bottom-row">
+                    <h2>844-207-4253</h2>
+                    <h2> | </h2>
+                    <a href="https://www.reservationcounter.com/hotels/show/61346a6/fairfield-inn-suites-lethbridge-lethbridge-ab/?cid=sem::TPRC::AW::Reservation_Counter_International_Origin_Canada_Alberta::CA_Alberta_Lethbridge_Fairfield_Inn_&_Suites_by_Marriott_Lethbridge_did-61346a6::fairfield%20inn%20%26%20suites%20lethbridge::e&creative=541903253490&device=c&AdPos=&utm_source=google&utm_medium=cpc&utm_term=fairfield%20inn%20%26%20suites%20lethbridge&utm_campaign=Reservation_Counter_International_Origin_Canada_Alberta&iv_=__iv_p_1_a_1739903675_g_70776496729_w_kwd-326775862783_h_9001300_ii__d_c_v__n_g_c_541903253490_k_fairfield%20inn%20%26%20suites%20lethbridge_m_e_l__t__e__r__vi__&gclid=CjwKCAiA0JKfBhBIEiwAPhZXDx5a4DeDsOn1JTdGkOtum_PN5uClBRGX8ApckoOpufsd3dXJCZX-OhoCvO0QAvD_BwE" target="_self"><h2>Websight</h2></a>
+                </div>
             </div>
         </div>
 
