--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -102,6 +102,7 @@
         <div id="spotlight-box">
             <div id="spotlight-1">
                 <p>Lethbridge Library</p>
+                <img src="images/book.png">
                 <h2>More than just a library.</h2>
                 <hr>
                 <h2>questions@lethlib.ca</h2>
@@ -113,6 +114,7 @@
             </div>
             <div id="spotlight-2">
                 <p>CASA</p>
+                <img src="images/art.png">
                 <h2>Home of the arts</h2>
                 <hr>
                 <div class="bottom-row">
@@ -123,6 +125,7 @@
             </div>
             <div id="spotlight-3">
                 <p>Fairfeild Hotel</p>
+                <img src="images/hotel.png">
                 <h2>Good place to stay when passing through</h2>
                 <hr>
                 <div class="bottom-row">
