--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -102,7 +102,7 @@
         <div id="spotlight-box">
             <div id="spotlight-1">
                 <p>Lethbridge Library</p>
-                <img src="images/book.png">
+                <img src="images/book.png" alt="book image">
                 <h2>More than just a library.</h2>
                 <hr>
                 <h2>questions@lethlib.ca</h2>
@@ -114,7 +114,7 @@
             </div>
             <div id="spotlight-2">
                 <p>CASA</p>
-                <img src="images/art.png">
+                <img src="images/art.png" alt="art image">
                 <h2>Home of the arts</h2>
                 <hr>
                 <div class="bottom-row">
@@ -125,7 +125,7 @@
             </div>
             <div id="spotlight-3">
                 <p>Fairfeild Hotel</p>
-                <img src="images/hotel.png">
+                <img src="images/hotel.png" alt="hotel image">
                 <h2>Good place to stay when passing through</h2>
                 <hr>
                 <div class="bottom-row">
