--- a/projects/lesson-7/lazyload.html
+++ b/projects/lesson-7/lazyload.html
@@ -8,12 +8,14 @@
     <title>Lesson 7</title>
 </head>
 <body>
-    <h1>Progressive Loading (Images)</h1>
-    <picture> <img src="images/placeholder.jpg" data-src="images/beard-tie.jpg"> </picture>
-    <picture> <img src="images/placeholder.jpg" data-src="images/missionary.jpg"> </picture>
-    <picture> <img src="images/placeholder.jpg" data-src="images/short-hair.jpg"> </picture>
-    <picture> <img src="images/placeholder.jpg" data-src="images/snow.jpg"> </picture>
-    <picture> <img src="images/placeholder.jpg" data-src="images/tie.jpg"> </picture>
+    <main>
+        <h1>Progressive Loading (Images)</h1>
+        <picture> <img src="images/placeholder.jpg" data-src="images/beard-tie.jpg" alt="picture"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/missionary.jpg" alt="picture"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/short-hair.jpg" alt="picture"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/snow.jpg" alt="picture"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/tie.jpg" alt="picture"> </picture>
+    </main>
 
     <script src="scripts/script.js" defer></script>
 </body>
