--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -15,24 +15,25 @@
     <title>Homepage</title>
 </head>
 <body>
+
     <header>
-        <div id="top-box">
-            <img id="logo" src="images/fulllogo.webp" alt="Logo image">
-            <div id="header-text">
+        <div class="top-box">
+            <img class="logo" src="images/fulllogo.webp" alt="Logo image">
+            <div class="header-text">
                 <p>LethoCom </p>
                 <h2>Chamber of Commerce </h2>
             </div>
-            <div id="icons"> 
+            <div class="icons"> 
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img id="facebook" src="images/facebook.png" alt="Facebook image">
+                    <img class="facebook" src="images/facebook.png" alt="Facebook image">
                 </a>
                 <a href="https://www.linkedin.com/" target="_blank">
-                    <img id="linkedin" src="images/linkedin.png" alt="Linkedin image">    
+                    <img class="linkedin" src="images/linkedin.png" alt="Linkedin image">    
                 </a> 
             </div>
             <nav>
-                <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-                <ul id="primaryNav">
+                <button class="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+                <ul class="primaryNav">
                     <li><a href="#">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="#">Join</a></li>
@@ -40,8 +41,8 @@
                 </ul>
             </nav>
         </div>
-        <div id="header-date"><span id="date-head"></span></div> <!-- ! Date -->
-        <p id="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+        <div class="header-date"><span class="date-head"></span></div> <!-- ! Date -->
+        <p class="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
     </header>
 
     <main>
