Added a link to my work in progress

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
         <div class="content-box">
             <h1>WDD 230: Assignment Portal</h1>
             <hr>
-            <ul>
+            <li>
                 <li>Lesson 01: <a href="projects/lesson1/dist/index.html">Week 1 Activity</a> </li>
                 <li>Lesson 02: <a href="projects/lesson2/design-principles.html">Week 2 Activity</a> </li>
                 <li>Lesson 03: <a href="projects/lesson3/">Week 3 Activity</a> </li>
                 <li>Chamber page:<a href="projects/chamber/"> Week 4 Activity</a></li>
                 <li>Lesson 05: <a href="projects/lesson5/bom.html"> Week 5 Activity</a></li>
-                <li>Lesson 07: <a href="projects/lesson-7/lazyload.html"> Week 7 Activity</a> </li>
+                <li>Lesson 07: <a href="projects/lesson-7/lazyload.html"> First Week 7 Activity</a> </li>
+                <li>Discover Page:<a href="projects/chamber/discover.html">Second Week 7 Activity</a></li>
             </ul>
             <hr>
         </div>
