--- a/projects/chamber/discover.html
+++ b/projects/chamber/discover.html
@@ -41,7 +41,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="header-date"><span class="date-head"></span></div> <!-- ! Date -->
+        <div class="header-date"><span class="date-head"></span></div> 
+        <div class="header-date"><span class="visit-time"></span></div>
         <p class="meeting-ad">Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
     </header>
     <main id="discovery-main">
