--- a/projects/chamber/discover.html
+++ b/projects/chamber/discover.html
@@ -51,14 +51,16 @@
             <div id="discovery-text-1"> 
                 <p>Buizness</p>
                 <h2>Lethbridge has 156 local buiznesses including:</h2> 
-                <li> Retail and shopping: 35.  </li>
-                <li>Food and beverage: 26 </li>
-                <li>Healthcare: 7</li>
-                <li>Professional services: 39</li>
-                <li>Construction and trade: 23 </li>
-                <li>Real estate: 12</li>
-                <li>Technology and innovation: 9</li>
-                <li>Tourisum and hospitality: 5</li>
+                <ul class="discovery-list">
+                    <li> Retail and shopping: 35.  </li>
+                    <li>Food and beverage: 26 </li>
+                    <li>Healthcare: 7</li>
+                    <li>Professional services: 39</li>
+                    <li>Construction and trade: 23 </li>
+                    <li>Real estate: 12</li>
+                    <li>Technology and innovation: 9</li>
+                    <li>Tourisum and hospitality: 5</li>
+                </ul>
             </div>
             <div id="discovery-text-2">
                 <p>Housing</p>
@@ -72,15 +74,19 @@
             <div id="discovery-text-4">
                 <p>Population</p>
                 <h2>There are 92,730 people in lethbridge.</h2>
-                <li>17% 0 - 14 years old.</li>
-                <li>66% 15 - 64 years old.</li>
-                <li>2.7% 85 years old, and older</li>
-                <li>Average age: 39.7 years old</li>
+                <ul class="discovery-list">
+                    <li>17% 0 - 14 years old.</li>
+                    <li>66% 15 - 64 years old.</li>
+                    <li>2.7% 85 years old, and older</li>
+                    <li>Average age: 39.7 years old</li>
+                </ul>
             </div>
             <div id="discovery-text-5">
                 <p>Soup kitchen</p>
-                <li>Average people fed: 77</li>
-                <li>Most people served during 2022: 136</li>
+                <ul class="discovery-list">
+                    <li>Average people fed: 77</li>
+                    <li>Most people served during 2022: 136</li>
+                </ul>
             </div>
         
         
