--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li>Lesson 05: <a href="projects/lesson5/bom.html"> Week 5 Activity</a></li>
                 <li>Lesson 07: <a href="projects/lesson-7/lazyload.html"> First Week 7 Activity</a> </li>
                 <li>Discover Page:<a href="projects/chamber/discover.html">Second Week 7 Activity</a></li>
+                <li>Lesson 07: <a href="projects/lesson8/tablebuild.html">Week 8 Activity</a></li>
             </ul>
             <hr>
         </div>
