--- a/projects/lesson8/tablebuild.html
+++ b/projects/lesson8/tablebuild.html
@@ -23,21 +23,21 @@
         <tbody>
             <tr>
                 <th>Feature 1</th>
-                <th class="checkmark">&#x2713</th>
-                <th class="checkmark">&#x2713</th>
-                <th class="checkmark">&#x2713</th>
+                <th class="checkmark">&#x2713;</th>
+                <th class="checkmark">&#x2713;</th>
+                <th class="checkmark">&#x2713;</th>
             </tr>
             <tr>
                 <th>Feature 2</th>
                 <th class="x">X</th>
-                <th class="checkmark">&#x2713</th>
-                <th class="checkmark">&#x2713</th>
+                <th class="checkmark">&#x2713;</th>
+                <th class="checkmark">&#x2713;</th>
             </tr>
             <tr>
                 <th>Feature 3</th>
                 <th class="x">X</th>
                 <th class="x">X</th>
-                <th class="checkmark">&#x2713</th>
+                <th class="checkmark">&#x2713;</th>
             </tr>
         </tbody>
     </table>
