Updated photos and fixed spelling mistakes.

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the main page of my site. It is meant to introduce people to the local
-    community of lethrbridge. Either as tourists, prospecting housekeepers, or buizness owners.">
+    community of lethbridge. Either as tourists, prospecting housekeepers, or business owners.">
     <link type="text/css" rel="stylesheet" href="styles/base.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
@@ -51,13 +51,15 @@
 
             <!-- ! Having three different sizes for the hero image seems like a poor choice in this case.  -->
             <img id="hero-img"
-            srcset="images/placeholder-hero-small-500.jpg 500w, 
-            images/placeholder-hero-medium-1000.jpg 1000w, 
-            images/large.jpg 1200w" <!-- ! Actually 800 pixels wide, but I had to include a large size here...-->
+            srcset="images/small.jpg 500w, 
+            images/medium.jpg 800w, 
+            images/large.jpg 1000w"
             sizes="(max-width: 560px) 500px, (max-width: 1024px) 1000px, 1200px"
             src="images/placeholder-hero-original.jpg"
             alt="Photo of Lethbridge">
-           
+
+             <!-- ! I have put the biggest image in the last space, and the medium image in the middle space. Even though -->
+           <!-- ! They would look better switched. -->
             
             <!-- <img id="hero-img"
             srcset="images/placeholder-hero-small-500.jpg 500w,  
