spellcheck and images

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -54,7 +54,9 @@
             srcset="images/small.jpg 500w, 
             images/medium.jpg 800w, 
             images/large.jpg 1000w"
-            sizes="(max-width: 560px) 500px, (max-width: 1024px) 1000px, 1200px"
+            sizes="(max-width: 560px) 500px,
+            (max-width: 800px) 800px,
+            1000px" 
             src="images/placeholder-hero-original.jpg"
             alt="Photo of Lethbridge">
 
@@ -136,7 +138,7 @@
                 <div class="bottom-row">
                     <h2>844-207-4253</h2>
                     <h2> | </h2>
-                    <a href="https://www.reservationcounter.com/hotels/show/61346a6/fairfield-inn-suites-lethbridge-lethbridge-ab/?cid=sem::TPRC::AW::Reservation_Counter_International_Origin_Canada_Alberta::CA_Alberta_Lethbridge_Fairfield_Inn_&_Suites_by_Marriott_Lethbridge_did-61346a6::fairfield%20inn%20%26%20suites%20lethbridge::e&creative=541903253490&device=c&AdPos=&utm_source=google&utm_medium=cpc&utm_term=fairfield%20inn%20%26%20suites%20lethbridge&utm_campaign=Reservation_Counter_International_Origin_Canada_Alberta&iv_=__iv_p_1_a_1739903675_g_70776496729_w_kwd-326775862783_h_9001300_ii__d_c_v__n_g_c_541903253490_k_fairfield%20inn%20%26%20suites%20lethbridge_m_e_l__t__e__r__vi__&gclid=CjwKCAiA0JKfBhBIEiwAPhZXDx5a4DeDsOn1JTdGkOtum_PN5uClBRGX8ApckoOpufsd3dXJCZX-OhoCvO0QAvD_BwE" target="_self"><h2>Websight</h2></a>
+                    <a href="https://www.reservationcounter.com/hotels/show/61346a6/fairfield-inn-suites-lethbridge-lethbridge-ab/?cid=sem::TPRC::AW::Reservation_Counter_International_Origin_Canada_Alberta::CA_Alberta_Lethbridge_Fairfield_Inn_&_Suites_by_Marriott_Lethbridge_did-61346a6::fairfield%20inn%20%26%20suites%20lethbridge::e&creative=541903253490&device=c&AdPos=&utm_source=google&utm_medium=cpc&utm_term=fairfield%20inn%20%26%20suites%20lethbridge&utm_campaign=Reservation_Counter_International_Origin_Canada_Alberta&iv_=__iv_p_1_a_1739903675_g_70776496729_w_kwd-326775862783_h_9001300_ii__d_c_v__n_g_c_541903253490_k_fairfield%20inn%20%26%20suites%20lethbridge_m_e_l__t__e__r__vi__&gclid=CjwKCAiA0JKfBhBIEiwAPhZXDx5a4DeDsOn1JTdGkOtum_PN5uClBRGX8ApckoOpufsd3dXJCZX-OhoCvO0QAvD_BwE" target="_self"><h2>Website</h2></a>
                 </div>
             </div>
         </div>
