changes to favicon

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="styles/base.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
+    <link rel="icon" href="favicon.ico"> <!-- We will see if this helps at all-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat&display=swap" rel="stylesheet">
@@ -36,7 +37,7 @@
                 <ul class="primaryNav">
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="#">Contact</a></li>    
                 </ul>
             </nav>
