Fixed laxyloading and image hover

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="styles/base.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
-    <!-- <link rel="icon" href="favicon.ico"> We will see if this helps at all -->
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat&display=swap" rel="stylesheet">
