Added link to main file

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li>Lesson 07: <a href="projects/lesson-7/lazyload.html"> First Week 7 Activity</a> </li>
                 <li>Discover Page:<a href="projects/chamber/discover.html">Second Week 7 Activity</a></li>
                 <li>Lesson 08: <a href="projects/lesson8/tablebuild.html">Week 8 Activity</a></li>
+                <li>Lesson 09: <a href="projects/lesson09/prophets.html">Week 9 Activity</a></li>
             </ul>
             <hr>
         </div>
