Finished the discovery page.

--- a/projects/chamber/directory.html
+++ b/projects/chamber/directory.html
@@ -48,7 +48,7 @@
     </header>
     <main id="directory-main">
     
-        <div class="menu">
+        <div id="directory-menu">
             <button id="grid-button">
                 <img src="images/icons/grid.png" alt="grid">
             </button>
