--- a/projects/lesson-7/lazyload.html
+++ b/projects/lesson-7/lazyload.html
@@ -10,11 +10,11 @@
 <body>
     <main>
         <h1>Progressive Loading (Images)</h1>
-        <picture> <img src="images/placeholder.jpg" data-src="images/beard-tie.jpg" alt="picture"> </picture>
-        <picture> <img src="images/placeholder.jpg" data-src="images/missionary.jpg" alt="picture"> </picture>
-        <picture> <img src="images/placeholder.jpg" data-src="images/short-hair.jpg" alt="picture"> </picture>
-        <picture> <img src="images/placeholder.jpg" data-src="images/snow.jpg" alt="picture"> </picture>
-        <picture> <img src="images/placeholder.jpg" data-src="images/tie.jpg" alt="picture"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/beard-tie.jpg" alt="picture" loading="lazy"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/missionary.jpg" alt="picture" loading="lazy"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/short-hair.jpg" alt="picture" loading="lazy"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/snow.jpg" alt="picture" loading="lazy"> </picture>
+        <picture> <img src="images/placeholder.jpg" data-src="images/tie.jpg" alt="picture" loading="lazy"> </picture>
     </main>
 
     <script src="scripts/script.js" defer></script>
