--- a/projects/chamber/thankyou.html
+++ b/projects/chamber/thankyou.html
@@ -19,7 +19,9 @@
 <body>
     <header>
         <div class="top-box">
-            <img class="logo" src="images/fulllogo.webp" alt="Logo image">
+            <a href="index.html">
+                <img class="logo" src="images/fulllogo.webp" alt="Logo image">
+            </a>
             <div class="header-text">
                 <p>LethoCom </p>
                 <h2>Chamber of Commerce </h2>
@@ -35,6 +37,7 @@
             <nav>
                 <button class="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul class="primaryNav">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
