Finished the contact page

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -41,7 +41,7 @@
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Contact</a></li>    
+                    <li><a href="contact.html">Contact</a></li>    
                 </ul>
             </nav>
         </div>
@@ -192,3 +192,6 @@
     <script src="scripts/windchill.js"></script>
 </body>
 </html>
+
+<!-- TODO: Make a custom not-found/404 page -->
+<!-- TODO: Make a path to contact information page -->
