Updated busnisess and images

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -94,50 +94,15 @@
 
         <div id="news-Release">
             <p>News Release</p>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reAprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, 
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <h2>Lethbridge, Alberta - LethoCom is exited to announce that the woop up days 
+                being held in indian battle park from august 22nd to 30th. This is event is an excellent
+                opportunity to show your support for small buisnesses, as food trucks and vendors
+                will be indian battle park selling snacks and souvoneers. With carnival rides
+                historical games, Itll be fun for the whole family. 
             </h2>
         </div>
 
         <div id="spotlight-box">
-            <div id="spotlight-1">
-                <p>Lethbridge Library</p>
-                <img src="images/book.png" alt="book image">
-                <h2>More than just a library.</h2>
-                <hr>
-                <h2>questions@lethlib.ca</h2>
-                <div class="bottom-row">
-                    <h2>(403) 380-7310</h2>
-                    <h2> | </h2>
-                    <a href="http://www.lethlib.ca/" target="_self"><h2>Website</h2></a>
-                </div>
-            </div>
-            <div id="spotlight-2">
-                <p>CASA</p>
-                <img src="images/art.png" alt="art image">
-                <h2>Home of the arts</h2>
-                <hr>
-                <div class="bottom-row">
-                    <h2>(403) 327-2272</h2>
-                    <h2> | </h2>
-                    <a href="https://casalethbridge.ca/" target="_self"><h2>Website</h2></a>
-                </div>
-            </div>
-            <div id="spotlight-3">
-                <p>Fairfeild Hotel</p>
-                <img src="images/hotel.png" alt="hotel image">
-                <h2>Good place to stay when passing through</h2>
-                <hr>
-                <div class="bottom-row">
-                    <h2>844-207-4253</h2>
-                    <h2> | </h2>
-                    <a href="https://www.reservationcounter.com/hotels/show/61346a6/fairfield-inn-suites-lethbridge-lethbridge-ab/?cid=sem::TPRC::AW::Reservation_Counter_International_Origin_Canada_Alberta::CA_Alberta_Lethbridge_Fairfield_Inn_&_Suites_by_Marriott_Lethbridge_did-61346a6::fairfield%20inn%20%26%20suites%20lethbridge::e&creative=541903253490&device=c&AdPos=&utm_source=google&utm_medium=cpc&utm_term=fairfield%20inn%20%26%20suites%20lethbridge&utm_campaign=Reservation_Counter_International_Origin_Canada_Alberta&iv_=__iv_p_1_a_1739903675_g_70776496729_w_kwd-326775862783_h_9001300_ii__d_c_v__n_g_c_541903253490_k_fairfield%20inn%20%26%20suites%20lethbridge_m_e_l__t__e__r__vi__&gclid=CjwKCAiA0JKfBhBIEiwAPhZXDx5a4DeDsOn1JTdGkOtum_PN5uClBRGX8ApckoOpufsd3dXJCZX-OhoCvO0QAvD_BwE" target="_self"><h2>Website</h2></a>
-                </div>
-            </div>
         </div>
 
         <div id="join-box">
@@ -184,5 +149,3 @@
 </html>
 
 <!-- TODO: Make a custom not-found/404 page -->
-<!-- TODO: Update the main page image of lethbridge -->
-<!-- TODO: Find text to put in the news release section -->
